force-app/main/default/objects/JobOpportunity__c/JobOpportunity__c.object-meta.xml
<CustomObject>
    <label>JobOpportunity</label>
    <nameField>
        <label>Job Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JobOpportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>