force-app/main/default/objects/JobOpportunity__c/fields/Candidate_Count__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Count__c</fullName>
    <description>Count of interested candidates (formula or roll-up)</description>
    <label>Candidate Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>