force-app/main/default/objects/JobOpportunity__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>JobOpportunities</relationshipLabel>
    <relationshipName>JobOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>