force-app/main/default/objects/JobOpportunity__c/fields/External_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Job_ID__c</fullName>
    <description>External system reference ID</description>
    <label>External Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>