force-app/main/default/objects/JobOpportunity__c/fields/Interview_Count__c.field-meta.xml
<CustomField>
    <fullName>Interview_Count__c</fullName>
    <description>Count of interviews scheduled (formula or roll-up)</description>
    <label>Interview Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>