force-app/main/default/objects/JobOpportunity__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Job location (Sydney, Remote, Melbourne, etc.)</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>