force-app/main/default/objects/JobOpportunity__c/fields/Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Posted_Date__c</fullName>
    <description>Date when job was published</description>
    <label>Posted Date</label>
    <type>Date</type>
</CustomField>