force-app/main/default/objects/JobOpportunity__c/fields/Salary_Range__c.field-meta.xml
<CustomField>
    <fullName>Salary_Range__c</fullName>
    <description>e.g., &quot;$150k-$180k&quot; or &quot;Salary TBD&quot;</description>
    <label>Salary Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>